--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=unita-5-giorno-5-progetto
+spring.datasource.url=jdbc:postgresql://localhost:5432/unita-5-giorno-5-progetto
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
